[tool.poetry]
name = "party-lab"
version = "0.1.0"
description = ""
authors = ["nnocturnnn <vikchehovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
